# Painter

./: CMakeLists.txt  ColorManager.cpp  ColorManager.h  ColorPickerWidget.cpp  ColorPickerWidget.h  CommandSystem.cpp  CommandSystem.h  Commands.cpp  Commands.h  Config.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  LayerView.cpp  LayerView.h  LayerWidget.cpp  LayerWidget.h  MainWindow.cpp  MainWindow.h  StartWindow.cpp  StartWindow.h  ToolManager.cpp  ToolType.h  Tools.cpp  Tools.h  ToolsWidget.cpp  colormanager.cpp  colormanager.h  colorpickerwidget.cpp  colorpickerwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  toolmanager.cpp  toolmanager.h  toolswidget.cpp  toolswidget.h
